feat: PIDM-1391 modified toList in validBundles